# gapc-cafe

./: CMakeLists.txt  README  asroot.sh  deps  form.cc  form.hh  gap_app.cc  gap_app.hh  highlight.cc  highlight.hh  hl.l  init.sh  install.sh  main.cc  menu.rc  notes  page.cc  page.hh  plainhref.bst  run.sh  stefan.info  stefan.make  tools.cc  tools.hh  update.sh
grammar/: adpfold.gap  affine.gap  elmamun.gap  matrix.gap  nussinov.gap  optbin.gap  pali.gap
pages/: about.html_  adp.bib  bio.bib  compiler.html_  contact.html_  education.html_  faq.html_  gap.bib  hlins.db  impressum.html_  index.html_  literature.html_  menu.html_  page.html_
resources/: gap.css
server/: gap  iptables.sh  var.www.gapapp.gap.wt
web/: CMakeLists.txt  repl.l  web.mf
